add bootstrap styles

--- a/src/app/@core/header/header.component.html
+++ b/src/app/@core/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <mat-toolbar color="primary" class="app-toolbar">
     <div class="app-name">
-      <button mat-icon-button (click)="toggleSidenav()">
+      <button mat-icon-button (click)="toggleSidenav()" class="menu-switch-btn">
         <mat-icon>menu</mat-icon>
       </button>
       <h1 translate>APP_NAME</h1>
