--- a/src/app/@modules/home/components/home/home.component.html
+++ b/src/app/@modules/home/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid no-padding">
   <div class="jumbotron text-center">
     <div class="message">
       <h4 translate>welcome_message</h4>
