--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -1,9 +1,88 @@
+html {
+  height: 100vh;
+}
+body {
+  margin: 0;
+  height: 100vh;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+span,
+label,
+legend,
+ul,
+li,
+ol,
+div,
+strong {
+  font-family: IRANSans !important;
+  text-align: right;
+}
+input,
+button,
+textarea,
+option,
+select {
+  font-family: vazir !important;
+  span {
+    font-family: vazir !important;
+  }
+}
+a {
+  text-decoration: none;
+  color: #212529;
+}
+
+div[class^="mat-step"] {
+  span {
+    font-family: vazir !important;
+  }
+}
+
+.gradient-green {
+  background: #2e7d32;
+  background: linear-gradient(50deg, #c5d429, #2e7d32);
+  color: #fff;
+}
+.gradient-red {
+  background: #d50000;
+  background: linear-gradient(50deg, #ff9e80, #d50000);
+  color: #fff;
+}
+
+.gradient-orange {
+  background: #ff7043;
+  background: linear-gradient(50deg, #ffd86f, #ff7043);
+  color: #fff;
+}
+
+.gradient-pink {
+  background: #e91e63;
+  background: linear-gradient(50deg, #f59e99, #e91e63);
+  color: #fff;
+}
+.gradient-gray {
+  background: #263238;
+  background: linear-gradient(50deg, #8ef9fe, #263238);
+  color: #fff;
+}
+
 pre {
   direction: ltr;
   background: #eaeaea;
   padding: 10px;
   border-radius: 10px;
   line-height: 20px;
+  direction: ltr;
+  text-align: left;
+  margin: 15px 5px;
 }
 .ltr {
   direction: ltr;
@@ -14,4 +93,7 @@ pre {
 
 .mat-form-field {
   margin-bottom: 15px;
+}
+.no-padding {
+  padding: 0;
 }
