--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -8,72 +8,4 @@
 @import "./vazir.scss";
 @import "./mat-icon.scss";
 @import "./common";
-
-html {
-  height: 100vh;
-}
-body {
-  margin: 0;
-  height: 100vh;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-a,
-span,
-label,
-legend,
-ul,
-li,
-ol,
-div,
-strong {
-  font-family: IRANSans !important;
-}
-input,
-button,
-textarea,
-option,
-select {
-  font-family: vazir !important;
-  span {
-    font-family: vazir !important;
-  }
-}
-a {
-  text-decoration: none;
-  color: #212529;
-}
-
-.gradient-green {
-  background: #2e7d32;
-  background: linear-gradient(50deg, #c5d429, #2e7d32);
-  color: #fff;
-}
-.gradient-red {
-  background: #d50000;
-  background: linear-gradient(50deg, #ff9e80, #d50000);
-  color: #fff;
-}
-
-.gradient-orange {
-  background: #ff7043;
-  background: linear-gradient(50deg, #ffd86f, #ff7043);
-  color: #fff;
-}
-
-.gradient-pink {
-  background: #e91e63;
-  background: linear-gradient(50deg, #f59e99, #e91e63);
-  color: #fff;
-}
-.gradient-gray {
-  background: #263238;
-  background: linear-gradient(50deg, #8ef9fe, #263238);
-  color: #fff;
-}
+@import "~bootstrap/dist/css/bootstrap.css";
